2007-10-23  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #271734

	* mail-mt.c: (do_op_status): Show description of operation, if
	available, instead of empty string and end activity properly, if
	operation ended before/during activity start. 

2007-10-05  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #468736

	* em-folder-view.c: (em_folder_view_print):
	* em-format.c: (merge_missing), (em_format_merge_handler):
	* em-format.h:

2007-09-21  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #411125

	* message-list.etspec:
	Uses 'compare="collate"' instead of 'compare="string"' to handle UTF
	characters correctly.

2007-09-07  Johnny Jacob  <jjohnny@novell.com>
 
	** Partial Fix for #467581.
	
 	* mail-component.c : (enable_folder_tree) : Get the right URIs for
	selected and current folders.
 	
2007-09-07  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #473903

	* em-folder-utils.c: (new_folder_created_cb),
	(emfu_popup_new_folder_response):
	* em-folder-tree.c: (get_last_child),
	(em_folder_tree_select_prev_path):
	* em-composer-utils.c: (composer_get_message):
	* em-format.c: (em_format_add_puri):
	* em-mailer-prefs.c: (junk_plugin_changed), (junk_plugin_setup):
	Fixes serious compiler warnings.

2007-09-06  Andre Klapper  <a9016009@gmx.de>

	* mail-config.c: (config_cache_labels):
	Don't translate empty label names.
	Fixes bug 363645. Thanks to Bastien Nocera.

2007-09-06  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #304993 (Novell Bugzilla)

	* em-folder-selector.c: (emfs_response): Do allow folder selection of
	created folders.
	* em-folder-utils.c: (new_folder_created_cb): Expand only if selection
	is not asked for.

2007-09-01  Matthew Barnes  <mbarnes@redhat.com>

	* em-folder-view:
	Use modern icon names for "Junk" and "Not Junk".

2007-08-31  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #377763

	* em-icon-stream.c: (emis_fit): Do not scale under 1x1 pixel.

2007-08-31  Srinivasa Ragavan  <sragavan@novell.com>
