@@ -1,3 +1,8 @@
+2007-10-31  Priit Laes  <plaes@svn.gnome.org>
+
+	* mail-component.c: (view_changed): Fix the ordering of the string
+	components.
+
 2007-10-23  Milan Crha  <mcrha@redhat.com>
 
 	** Fix for bug #271734
